@@ -1,7 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -145,5 +145,6 @@ void GafferBindings::bindApplicationRoot()
 		.def( "setClipboardContents", &ApplicationRoot::setClipboardContents )
 		.def( "savePreferences", (void (ApplicationRoot::*)()const)&ApplicationRoot::savePreferences )
 		.def( "savePreferences", (void (ApplicationRoot::*)( const std::string & )const)&ApplicationRoot::savePreferences )
+		.def( "preferencesLocation", &ApplicationRoot::preferencesLocation )
 	;	
 }
